--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,11 @@
   .secondary-btn{
     @apply lg:px-6 lg:py-3 md:px-4 md:py-2 px-2 py-1  rounded-md bg-[#59C6D2] hover:bg-[#59C6D2]/80 transition-all text-white text-lg font-semibold cursor-pointer;
   }
+  .menu .active{
+    @apply border-2 border-[#23BE0A] bg-white text-[#23BE0A] font-semibold !important
+  }
 }
+
 
 body{
   /* font-family: "Playfair Display", "serif"; */
